--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Set up Git repo
         uses: actions/checkout@v3
       - name: Compile LaTeX document
-        uses: xu-cheng/latex-actions@v3
+        uses: xu-cheng/latex-action@v3
         with:
           root_file: cv.tex
       - name: Upload PDF file
